--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ember-resize-text",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0",
+  "description": "ember addon that makes use of ember-text-measurer to efficiently resize the font of a single line of text to make it fit within its bounds",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "resize",
+    "test",
+    "font-size"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Steve Hummingbird",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -18,15 +21,16 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-text-measurer": "^0.4.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.16.1",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.0.0",
-    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-eslint": "^4.1.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
