--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli": "~2.16.1",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.1.0",
+    "ember-cli-github-pages": "^0.1.2",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
