--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "ember-resize-text",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "ember addon that makes use of ember-text-measurer to efficiently resize the font of a single line of text to make it fit within its bounds",
   "keywords": [
-    "ember-addon",
+    "ember",
+    "addon",
     "resize",
-    "test",
-    "font-size"
+    "text",
+    "font",
+    "size"
   ],
   "license": "MIT",
   "author": "Steve Hummingbird",
