--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.3",
   "description": "ember addon that makes use of ember-text-measurer to efficiently resize the font of a single line of text to make it fit within its bounds",
   "keywords": [
-    "ember",
-    "addon",
+    "ember-addon",
     "resize",
     "text",
     "font",
