--- a/package.json
+++ b/package.json
@@ -43,9 +43,14 @@
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator-for-testing": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-source-channel-url": "^1.0.1",
     "ember-source": "~3.0.0",
-    "loader.js": "^4.2.3"
+    "ember-try": "^0.2.23",
+    "loader.js": "^4.2.3",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^5.2.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
