--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-source-channel-url": "^1.0.1",
     "ember-source": "~3.0.0",
+    "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
-    "loader.js": "^4.2.3",
     "eslint-plugin-ember": "^5.0.0",
-    "eslint-plugin-node": "^5.2.1"
+    "eslint-plugin-node": "^6.0.0",
+    "loader.js": "^4.2.3",
+    "qunit-dom": "^0.5.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
