--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "coveralls": "^3.0.2",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-text-measurer": "^0.5.0"
@@ -33,6 +34,7 @@
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.6.0",
+    "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^5.0.0",
     "ember-cli-github-pages": "^0.2.0",
